[package]
name = "sov-celestia-adapter"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["bytes"] }
bech32 = { workspace = true, default-features = true }
prost = "0.12"
# I keep this commented as a reminder to opportunity to optimze this crate for non native compilation
#tendermint = { version = "0.32", default-features = false, features = ["std"] }

celestia-proto = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "66b7c6c" }
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "66b7c6c", default-features = false, optional = true }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "66b7c6c", default-features = false }
tendermint = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "ef58b85", default-features = false }
tendermint-proto = { git = "https://github.com/eigerco/celestia-tendermint-rs.git", rev = "ef58b85" }
nmt-rs = { git = "https://github.com/Sovereign-Labs/nmt-rs.git", rev = "d821332", features = [
    "serde",
    "borsh",
] }

# Convenience
async-trait = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
base64 = "0.21.5"
hex = { workspace = true, features = ["serde"] }
jsonrpsee = { workspace = true, features = ["http-client"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sov-zk-cycle-macros = { path = "../../utils/zk-cycle-macros", version = "0.3", optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }

sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }


[dev-dependencies]
postcard = { version = "1", features = ["use-std"] }
proptest = { version = "1.3" }
sov-celestia-adapter = { path = ".", features = ["native"] }
wiremock = "0.5"

[features]
default = []
native = [
    "dep:tokio",
    "dep:futures",
    "dep:pin-project",
    "dep:jsonrpsee",
    "dep:serde_json",
    "dep:celestia-rpc",
    "tendermint/default",
    "sov-rollup-interface/native",
]
risc0 = [
    "dep:risc0-zkvm",
    "dep:risc0-zkvm-platform"
]
bench = [
    "sov-zk-cycle-macros/bench",
    "risc0"
]
