[package]
name = "sov-mock-zkvm"
description = "Mock zkVM implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }

[features]
default = []
native = []
