[package]
name = "risc0-adapter"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sov-rollup-interface = { path = "../../rollup-interface" }
risc0-zkvm = { version = "0.16", default-features = false, features = ["std"] }
risc0-zkp = { version = "0.16", optional = true, features = ["cuda"] }
risc0-circuit-rv32im = { version = "0.16", optional = true, features = ["cuda"] }
serde = { workspace = true }
anyhow = { workspace = true }

# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"


[features]
default = ["native"]
native = ["risc0-zkvm/prove", "dep:risc0-zkp", "dep:risc0-circuit-rv32im"]
