[package]
name = "risc0-adapter"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
risc0-zkvm = { version = "0.16", default-features = false, features = ['std'] }
risc0-zkvm-platform = { version = "0.16" }
risc0-zkp = { version = "0.16", optional = true }
risc0-circuit-rv32im = { version = "0.16", optional = true }
serde = { workspace = true }
bytemuck = "1.13.1"
once_cell = { version = "1.7.2", optional = true}
parking_lot = { version = "0.11.1", optional = true}
zk-cycle-utils = { path = "../../utils/zk-cycle-utils"}
sov-rollup-interface = { path = "../../rollup-interface" }

[features]
default = ["native"]
native = ["risc0-zkvm/prove", "dep:risc0-zkp", "dep:risc0-circuit-rv32im"]
bench = ["once_cell","parking_lot"]
