[package]
name = "sov-risc0-adapter"
authors = { workspace = true }
description = "An adapter allowing Risc0 to be used with the Sovereign SDK"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
risc0-zkvm-platform = { workspace = true }
risc0-zkp = { workspace = true, optional = true }
risc0-circuit-rv32im = { workspace = true, optional = true }
serde = { workspace = true }
bytemuck = "1.13.1"
once_cell = { version = "1.7.2", optional = true }
parking_lot = { version = "0.12.1", optional = true }
sov-zk-cycle-utils = { path = "../../utils/zk-cycle-utils", version = "0.2" }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.2" }

[features]
default = []
native = ["risc0-zkvm/prove", "dep:risc0-zkp", "dep:risc0-circuit-rv32im"]
bench = ["once_cell", "parking_lot", "native", "sov-zk-cycle-utils/native"]
