[package]
name = "schemadb"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Dependencies maintained by sovereign labs
sovereign-sdk = { path = "../../sdk" }

# External dependencies 
anyhow = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rocksdb = { workspace = true }
tracing = { workspace = true }

# Temppath external dependencies
byteorder = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
byteorder = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
[features]
default = []
temppath = ["dep:byteorder", "dep:rand", "dep:hex"]
