[package]
name = "sovereign-db"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Maintained by sovereign labs
jmt = { workspace = true }
schemadb = { path = "../../db/schemadb" }
sovereign-sdk = { path = "../../sdk" }


# External
anyhow = { workspace = true }
byteorder = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rocksdb = { workspace = true }


[dev-dependencies]
schemadb = { path = "../../db/schemadb", features = ["temppath"] }

[features]
default = []
temp = ["schemadb/temppath"]
