[package]
name = "avail-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
structopt = "0.3.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.102"

avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.6.0", features = ["std"] }
subxt = "0.27"
sp-keyring = "18.0.0"
sp-core = { version = "16.0.0", default-features = false }
hex.workspace = true
