[package]
name = "demo-nft-module"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true, optional = true }
schemars =  { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"], optional = true }

sov-modules-api = { path = "../../module-system/sov-modules-api" }
sov-modules-macros = {path = "../../module-system/sov-modules-macros"}
sov-modules-macro-rules = {path = "../../module-system/sov-modules-macro-rules"}
sov-state = { path = "../../module-system/sov-state" }

[dev-dependencies]
sov-rollup-interface = { path = "../../rollup-interface" }
sov-data-generators = { path = "../../module-system/utils/sov-data-generators" }
tempfile = { workspace = true }
demo-nft-module = { version = "*", features = ["native"], path = "." }

[features]
default = []
serde = ["dep:serde"]
native = ["serde", "serde_json", "jsonrpsee", "schemars", "sov-state/native", "sov-modules-api/native", ]
test = ["native"]
