[workspace]
members = [
    "methods",
    "host",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.68"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
bincode = "1.3.3"
hex = "0.4.3"
jsonrpsee = "0.16.2"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
sha2 = "0.10.6"
risc0-zkvm = { version = "0.16" }
risc0-build = { version = "0.16" }
tokio = { version = "1", features = ["full"] }
tempfile = "3.6.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
