[package]
name = "sov-demo-prover-host"
version = "0.2.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

sov-celestia-adapter = { path = "../../adapters/celestia", features = ["native", "bench"] }
sov-demo-rollup = { path = "../demo-rollup", features = ["native"] }
demo-stf = { path = "../demo-stf", optional = true }
sov-rollup-interface = { path = "../../rollup-interface" }
sov-risc0-adapter = { path = "../../adapters/risc0", features = ["native"] }
const-rollup-config = { path = "../const-rollup-config" }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"] }
sov-state = { path = "../../module-system/sov-state", features = ["native"] }
sov-zk-cycle-macros = { path = "../../utils/zk-cycle-macros", optional = true }
sov-stf-runner = { path = "../../full-node/sov-stf-runner" }

methods = { path = "./methods" }


[dev-dependencies]
tempfile = { workspace = true }
once_cell = "1.7.2"
parking_lot = "0.12.1"
prettytable-rs = "^0.10"
env_logger = "0.10.0"
log = "0.4"
log4rs = "1.0"
regex = "1.5"

[[bench]]
name = "prover_bench"
harness = false
required-features = ["bench"]

[features]
bench = ["sov-risc0-adapter/bench", "sov-zk-cycle-macros/bench", "methods/bench", "demo-stf"]
experimental = ["sov-demo-rollup/experimental"]
