[package]
name = "sov-demo-rollup"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false
resolver = "2"
default-run = "sov-demo-rollup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true, features = ["bytes"] }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
jmt = { workspace = true }
secp256k1 = { workspace = true, optional = true }
futures = "0.3"

tokio = { workspace = true }
reth-primitives = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

demo-stf = { path = "../demo-stf", features = ["native"] }
sov-celestia-adapter = { path = "../../adapters/celestia", features = ["native"] }
sov-rollup-interface = { path = "../../rollup-interface" }
sov-db = { path = "../../full-node/db/sov-db" }
sov-ethereum = { path = "../../full-node/sov-ethereum", optional = true }
sov-sequencer = { path = "../../full-node/sov-sequencer" }
sov-stf-runner = { path = "../../full-node/sov-stf-runner" }
sov-risc0-adapter = { path = "../../adapters/risc0", features = ["native"] }
sov-modules-stf-template = { path = "../../module-system/sov-modules-stf-template", features = ["native"] }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"] }
sov-state = { path = "../../module-system/sov-state", features = ["native"] }
const-rollup-config = { path = "../const-rollup-config" }
sov-cli = { path = "../../module-system/sov-cli" }
clap = { workspace = true }


[dev-dependencies]
sov-evm = { path = "../../module-system/module-implementations/sov-evm", features = ["smart_contracts"] }
sov-bank = { path = "../../module-system/module-implementations/sov-bank", features = ["native"] }
sha2 = { workspace = true }
reqwest = "0.11"
tendermint = "0.32"
tempfile = { workspace = true }
proptest = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", features = ["fuzzing"] }
prometheus = "0.11.0"
prettytable-rs = "^0.10"
criterion = "0.5.1"

ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ethers-contract = { workspace = true }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
ethers = { workspace = true }
revm = { workspace = true }


[features]
default = []
experimental = ["sov-ethereum/experimental", "reth-primitives", "secp256k1", "demo-stf/experimental"]

[[bench]]
name = "rollup_bench"
harness = false

[[bench]]
name = "rollup_coarse_measure"
harness = false

[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"
