[package]
name = "demo-stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
tokio = { workspace = true, optional = true }
hex = { workspace = true }
tracing = { workspace = true }

const-rollup-config = { path = "../const-rollup-config" }
sov-rollup-interface = { path = "../../rollup-interface" }
sov-election = { path = "../../module-system/module-implementations/examples/sov-election" }
sov-sequencer-registry = { path = "../../module-system/module-implementations/sov-sequencer-registry" }
sov-blob-storage = { path = "../../module-system/module-implementations/sov-blob-storage" }
sov-bank = { path = "../../module-system/module-implementations/sov-bank" }
sov-modules-stf-template = { path = "../../module-system/sov-modules-stf-template" }
sov-value-setter = { path = "../../module-system/module-implementations/examples/sov-value-setter" }
sov-accounts = { path = "../../module-system/module-implementations/sov-accounts" }
sov-state = { path = "../../module-system/sov-state" }
sov-modules-api = { path = "../../module-system/sov-modules-api" }
sov-sequencer = { path = "../../full-node/sov-sequencer", optional = true }
sov-stf-runner = { path = "../../full-node/sov-stf-runner", optional = true }
# Only enable the evm on "experimental" feature
sov-evm = { path = "../../module-system/module-implementations/sov-evm", optional = true }

[dev-dependencies]
sov-rollup-interface = { path = "../../rollup-interface", features = ["mocks"] }
sov-data-generators = { path = "../../module-system/utils/sov-data-generators" }
tempfile = { workspace = true }
rand = "0.8"

[features]
default = []
experimental = ["sov-evm/experimental"]
native = [
    "sov-bank/native",
    "sov-accounts/native",
    "sov-election/native",
    "sov-sequencer-registry/native",
    "sov-blob-storage/native",
    "sov-value-setter/native",
    "sov-modules-api/native",
    "sov-rollup-interface/mocks",
    "sov-modules-stf-template/native",
    "sov-sequencer",
    "sov-stf-runner",
    "clap",
    "serde_json",
    "jsonrpsee",
    "tokio",
    "toml",
]
verifier = []
