[package]
name = "expose_rpc_debug"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native", "macros"] }
sov-state = { path = "../../module-system/sov-state", features = ["native"] }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
serde = { workspace = true }
borsh = { workspace = true }
